--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -6,16 +6,15 @@
 #[en]
   #languageCode = "en-us"
   # contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
-[zh]
-  languageCode = "en-us"
+
 # Uncomment the lines below to configure your website in a second language.
-#[zh]
-#  languageCode = "zh-Hans"
-#  contentDir = "content/zh"
-#  title = "Chinese website title..."
-#  [zh.params]
-#    description = "Site description in Chinese..."
-#  [[zh.menu.main]]
-#    name = "Wo"
-#    url = "#about"
-#    weight = 1
+[zh]
+  languageCode = "zh"
+  contentDir = "content/zh"
+  title = "Chinese website title..."
+  [zh.params]
+    description = "Site description in Chinese..."
+  [[zh.menu.main]]
+    name = "Wo"
+    url = "#about"
+    weight = 1
